--- a/baseline/gwt/pom.xml
+++ b/baseline/gwt/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
-      <version>3.0.4.RELEASE</version>
+      <version>3.0.5.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -79,11 +79,11 @@
       <version>0.1-SNAPSHOT</version>
     </dependency>
 
-    <!-- SQL JDBC Driver -->
+    <!-- JDBC Driver -->
     <dependency>
-      <groupId>net.sourceforge.jtds</groupId>
-      <artifactId>jtds</artifactId>
-      <version>1.2.4</version>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.6.1.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
