--- a/products/splitBilling/poms/pom.xml
+++ b/products/splitBilling/poms/pom.xml
@@ -4,14 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dodson.troy</groupId>
+  <groupId>com.dodson.troy.products.splitBilling.poms</groupId>
   <artifactId>builder</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
-    <module>baseline</module>
-    <module>project</module>
-    <module>products</module>
+    <module>master</module>
   </modules>
 </project>
