--- a/products/splitBilling/war/pom.xml
+++ b/products/splitBilling/war/pom.xml
@@ -34,10 +34,10 @@
   </build>
 
   <dependencies>
-    <!-- Common -->
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>com.dodson.troy.products.splitBilling</groupId>
+      <artifactId>core</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
 
     <!-- GWT -->
@@ -52,32 +52,6 @@
     <dependency>
       <groupId>org.workingonit</groupId>
       <artifactId>gwtBridge</artifactId>
-    </dependency>
-
-    <!-- Spring -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-    </dependency>
-
-    <!-- Hibernate -->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jpa_2.0_spec</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-    </dependency>
-
-    <!-- JDBC Driver -->
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
     </dependency>
   </dependencies>
 </project>
